CI/codespell: use point release instead of master
Using the development branch isn't ideal for production as it is prone to breakage with a faulty bug or PR. So in this commit I am updating the codespell action to use the point release instead.

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: codespell-project/actions-codespell@master
+      - uses: codespell-project/actions-codespell@v2
         with:
           ignore_words_file: .github/codespell-ignore
           # Exit with 0 regardless of typos.
           only_warn: 1
-          # Only check files from English pages
+          # Only check English files from the pages directory
           path: pages/*
