CODEOWNERS: add @isaacvicente to pt_BR pages

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,6 +3,7 @@
 /pages.it/ @mebeim @yutyo
 /pages.pl/ @acuteenvy
 /pages.pt_BR/ @waldyrious
+/pages.pt_BR/ @isaacvicente
 /pages.pt_PT/ @waldyrious
 /pages.ta/ @kbdharun
 /pages.tr/ @yutyo
