--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,8 +2,7 @@
 /pages.es/ @navarroaxel
 /pages.it/ @mebeim @yutyo
 /pages.pl/ @acuteenvy
-/pages.pt_BR/ @waldyrious
-/pages.pt_BR/ @isaacvicente
+/pages.pt_BR/ @waldyrious @isaacvicente
 /pages.pt_PT/ @waldyrious
 /pages.ta/ @kbdharun
 /pages.tr/ @yutyo
