CODEOWNERS: add @isaacvicente for pt_BR

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,7 +13,7 @@
 /contributing-guides/*.es.md @navarroaxel
 /contributing-guides/*.it.md @mebeim @yutyo
 /contributing-guides/*.pl.md @acuteenvy
-/contributing-guides/*.pt_BR.md @waldyrious
+/contributing-guides/*.pt_BR.md @waldyrious @isaacvicente
 /contributing-guides/*.pt_PT.md @waldyrious
 /contributing-guides/*.ta.md @kbdharun
 /contributing-guides/*.tr.md @yutyo
