--- a/.github/ISSUE_TEMPLATE/page-request.yml
+++ b/.github/ISSUE_TEMPLATE/page-request.yml
@@ -20,7 +20,7 @@ body:
       options:
         - label: Android
         - label: Linux
-        - label: macOS
+        - label: macOS (osx)
         - label: sunOS
         - label: Windows
 
