ISSUE TEMPLATES (modification request): add page edit label
Co-authored-by: Jack Lin <jacklin@cybersoft4u.com>

--- a/.github/ISSUE_TEMPLATE/page-modification-request.yml
+++ b/.github/ISSUE_TEMPLATE/page-modification-request.yml
@@ -1,7 +1,7 @@
 name: 📄 Page modification request
 title: "page request: "
 description: Page modification request template.
-labels: help wanted
+labels: page edit, help wanted
 body:
   - type: textarea
     attributes:
