test/ci: building translations as wildcard 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,10 @@ jobs:
             pages.en)
               python render.py ../../$locale -o tldr-pages.pdf ;;
             *)
-              python render.py ../../$locale -o tldr-pages-$(basename $locale .pdf).pdf ;;
+              if [ -f "$locale" ]; then
+                python render.py ../../$locale -o tldr-pages-$(basename $locale .pdf).pdf
+              fi
+              ;;
           esac
         done
 
