--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,7 @@ jobs:
       run: bash scripts/build.sh
 
     - name: Build PDF
-      if: github.repository == 'tldr-pages/tldr'
-      # if: github.repository == 'tldr-pages/tldr' && github.ref == 'refs/heads/main'
+      if: github.repository == 'tldr-pages/tldr' && github.ref == 'refs/heads/main'
       working-directory: ./scripts/pdf
       run: |
         for path in ../../pages*; do
@@ -58,14 +57,7 @@ jobs:
               python render.py ${path} -c basic -o tldr-pages-${language}.pdf
               ;;
           esac
-        done    
-
-    - name: Upload Build Artifacts
-      if: github.repository == 'tldr-pages/tldr'
-      uses: actions/upload-artifact@v3
-      with:
-         name: pdf-artifacts
-         path: ./scripts/pdf/*.pdf
+        done
 
     - name: Deploy
       if: github.repository == 'tldr-pages/tldr' && github.ref == 'refs/heads/main'
