ISSUE-TEMPLATES: add page modification request template; update page request template (#10826)
Co-authored-by: Jack Lin <jacklin@cybersoft4u.com>

--- a/.github/ISSUE_TEMPLATE/page-modification-request.yml
+++ b/.github/ISSUE_TEMPLATE/page-modification-request.yml
@@ -1,13 +1,13 @@
-name: 📄 Page request
+name: 📄 Page modification request
 title: "page request: "
-description: Page request template.
-labels: new command, help wanted
+description: Page modification request template.
+labels: page edit, help wanted
 body:
   - type: textarea
     attributes:
       label: Command description
-      description: Describe a command you want to be summarized.
-      placeholder: Tell us about the command!
+      description: Describe the command you want the page(s) to be modified.
+      placeholder: Tell us about the changes in the command!
   - type: input
     attributes:
       label: Command details
@@ -23,4 +23,3 @@ body:
         - label: macOS (osx)
         - label: sunOS
         - label: Windows
-
