ISSUE-TEMPLATES: fix typo

--- a/.github/ISSUE_TEMPLATE/page-modification-request.yml
+++ b/.github/ISSUE_TEMPLATE/page-modification-request.yml
@@ -1,5 +1,5 @@
 name: 📄 Page modification request
-title: "page request: "
+title: "page modification request: "
 description: Page modification request template.
 labels: page edit, help wanted
 body:
