Revert "scripts: build and deploy PDF pages for translations (#10846)"
This reverts commit a2ab57784897ee624ed49407b3ee0a6f27a39703.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Build PDF
       if: github.repository == 'tldr-pages/tldr' && github.ref == 'refs/heads/main'
       working-directory: ./scripts/pdf
-      run: bash build-pdf.sh
+      run: python render.py ../../pages -c solarized-light
 
     - name: Deploy
       if: github.repository == 'tldr-pages/tldr' && github.ref == 'refs/heads/main'
