CI/codespell: use point release instead of master
Using the development branch isn't ideal for production as it is prone to breakage with a faulty bug or PR. So in this commit, I am updating the codespell action to use the point release instead for more stability and versatility.

Signed-off-by: K.B.Dharun Krishna <kbdharunkrishna@gmail.com>

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -18,7 +18,7 @@ jobs:
             pages.*/*/*
             package-lock.json
 
-      - uses: codespell-project/actions-codespell@master
+      - uses: codespell-project/actions-codespell@v2
         with:
           ignore_words_file: .github/codespell-ignore
           # Exit with 0 regardless of typos.
