--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
 /pages.de/ @pixelcmtd @marchersimon
 /pages.es/ @navarroaxel @kant
+/pages.hi/ @kbdharun
 /pages.id/ @reinhart1010
 /pages.it/ @mebeim @yutyo @Magrid0
 /pages.nl/ @sebastiaanspeck
@@ -13,6 +14,7 @@
 
 /contributing-guides/*.de.md @pixelcmtd @marchersimon
 /contributing-guides/*.es.md @navarroaxel @kant
+/contributing-guides/*.hi.md @kbdharun
 /contributing-guides/*.id.md @reinhart1010
 /contributing-guides/*.it.md @mebeim @yutyo @Magrid0
 /contributing-guides/*.nl.md @sebastiaanspeck
