[revise]: revise MAINTAINERSmd, CODEOWNERS file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,6 +10,7 @@
 /pages.tr/ @yutyo
 /pages.zh/ @blueskyson @einverne
 /pages.zh_TW/ @blueskyson
+/pages.ko/ @IMHOJEONG
 
 /contributing-guides/*.de.md @pixelcmtd @marchersimon
 /contributing-guides/*.es.md @navarroaxel @kant
