MAINTAINERS: Add @gutjuri to Codeowners for german

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-/pages.de/ @pixelcmtd @marchersimon
+/pages.de/ @pixelcmtd @marchersimon @gutjuri
 /pages.es/ @navarroaxel @kant
 /pages.id/ @reinhart1010
 /pages.it/ @mebeim @yutyo @Magrid0
@@ -11,7 +11,7 @@
 /pages.zh/ @blueskyson @einverne
 /pages.zh_TW/ @blueskyson
 
-/contributing-guides/*.de.md @pixelcmtd @marchersimon
+/contributing-guides/*.de.md @pixelcmtd @marchersimon @gutjuri
 /contributing-guides/*.es.md @navarroaxel @kant
 /contributing-guides/*.id.md @reinhart1010
 /contributing-guides/*.it.md @mebeim @yutyo @Magrid0
