--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-/pages.de/ @pixelcmtd @marchersimon
+/pages.de/ @pixelcmtd @marchersimon @gutjuri
 /pages.es/ @navarroaxel @kant
 /pages.hi/ @kbdharun
 /pages.id/ @reinhart1010
@@ -13,7 +13,7 @@
 /pages.zh_TW/ @blueskyson
 /pages.ko/ @IMHOJEONG
 
-/contributing-guides/*.de.md @pixelcmtd @marchersimon
+/contributing-guides/*.de.md @pixelcmtd @marchersimon @gutjuri
 /contributing-guides/*.es.md @navarroaxel @kant
 /contributing-guides/*.hi.md @kbdharun
 /contributing-guides/*.id.md @reinhart1010
