--- a/.github/ISSUE_TEMPLATE/page-request.yml
+++ b/.github/ISSUE_TEMPLATE/page-request.yml
@@ -1,6 +1,6 @@
 name: 📄 Page request
 title: "page request: "
-description: Page request template.
+description: Request creation of a page.
 labels: new command, help wanted
 body:
   - type: textarea
@@ -8,19 +8,31 @@ body:
       label: Command description
       description: Describe a command you want to be summarized.
       placeholder: Tell us about the command!
+    validations:
+      required: true
   - type: input
     attributes:
       label: Command details
       description: Describe any details related to a command.
       placeholder: e.g. command version
-  - type: checkboxes
+  - type: input
     attributes:
-      label: OS
-      description: Select which operating system(s) this command works with.
+      label: Documentation
+      description: Link to the official documentation.
+      placeholder: https://example.com
+  - type: dropdown
+    attributes:
+      label: Platform
+      description: What OS does the program run on? (Select 'Common' if the program works on more than one OS)
       options:
-        - label: Android
-        - label: Linux
-        - label: macOS (osx)
-        - label: sunOS
-        - label: Windows
-
+        - Linux
+        - macOS (OS X)
+        - Windows
+        - FreeBSD
+        - OpenBSD
+        - NetBSD
+        - Android
+        - SunOS
+        - Common
+    validations:
+      required: true
