--- a/.github/ISSUE_TEMPLATE/page-request.yml
+++ b/.github/ISSUE_TEMPLATE/page-request.yml
@@ -1,5 +1,5 @@
 name: 📄 Page request
-title: "page request: "
+title: "Page request: "
 description: Request creation of a page.
 labels: new command, help wanted
 body:
