--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-dept: 0
+        fetch-depth: 0
 
     - uses: actions/setup-python@v4
       with:
